# vulkano-practice

./: Cargo.toml  README.md  TODO.md  build.rs
resources/: map_file.map  settings.toml
resources/shaders/: chunk.fs  chunk.vs  frag.glsl  red_chunk.fs  vert.glsl
src/: main.rs
src/map/: chunk.rs  map.rs  mod.rs  vertex.rs
src/object/: mod.rs
src/options/: mod.rs
src/player/: mod.rs
src/shaders/: mod.rs
src/world/: chunk.rs  cube.rs  map.rs  mod.rs  vertex.rs
