[package]
name = "cube_map_gen_practice"
version = "0.1.0"
authors = ["Maslab <maslabgamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18.0"
vulkano-win = "0.18.0"
vulkano-shaders = "0.18.0"
winit = "0.22.1"
device_query = "0.2.4"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

cgmath = "0.17"

[profile.dev]
opt-level = 3
