[package]
name = "cube_map_gen_practice"
version = "0.1.0"
authors = ["Maslab <maslabgamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.29.0"
vulkano-win = "0.29.0"
vulkano-shaders = "0.29.0"
winit = "0.26.1"
device_query = "1.1.1"

serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"

cgmath = "0.18"

dashmap = "5.3.4"

[profile.dev]
opt-level = 3
